obsidian.css
/* ... */
.markdown-embed-title
{
    font-weight: 600 !important;
}

.markdown-embed
{
    padding-left: 10px !important;
    padding-right: 10px !important;
    margin-left: 10px !important;
    margin-right: 10px !important;
}


.cm-header-1.cm-header-1,
.markdown-preview-section.markdown-preview-section h1 {
    font-family: var(--font-title);
    font-weight: 400;
    text-shadow: 1px 1px rgba(0,0,0,0.05),
    2px 2px rgba(0,0,0,0.05),
    3px 3px rgba(0,0,0,0.05),
    4px 4px rgba(0,0,0,0.05),
    5px 5px rgba(0,0,0,0.05),
    6px 6px rgba(0,0,0,0.05),
    7px 7px rgba(0,0,0,0.05),
    8px 8px rgba(0,0,0,0.05),
    9px 9px rgba(0,0,0,0.05)
}
.theme-light .cm-header-1.cm-header-1,
.theme-light .markdown-preview-section.markdown-preview-section h1 {
    text-shadow: 1px 1px rgba(0,0,0,0.02),
    2px 2px rgba(0,0,0,0.02),
    3px 3px rgba(0,0,0,0.02),
    4px 4px rgba(0,0,0,0.02),
    5px 5px rgba(0,0,0,0.02),
    6px 6px rgba(0,0,0,0.02),
    7px 7px rgba(0,0,0,0.02),
    8px 8px rgba(0,0,0,0.02),
    9px 9px rgba(0,0,0,0.02)
}

.markdown-preview-section.markdown-preview-section h1 {
    text-align: center;
}

.markdown-preview-section h2,
.markdown-preview-section.markdown-preview-section h2,
.markdown-preview-section.markdown-preview-section h3,
.markdown-preview-section.markdown-preview-section h4,
.markdown-preview-section.markdown-preview-section h5,
.markdown-preview-section.markdown-preview-section h6
{
    font-family: var(--font-headings);
    font-weight: 600;
}


.cm-header-1.cm-header-1,
.markdown-preview-section.markdown-preview-section h1
{
    font-size: 5em;
    color: var(--text-title-h1) !important;
    line-height: 0.75;
}

.cm-header-2,
.markdown-preview-section h2
{
    font-size: 26px !important;
    color: var(--text-title-h2) !important;
}

.cm-header-3,
.markdown-preview-section h3
{
    font-size: 22px !important;
    color: var(--text-title-h3) !important;
}

.cm-header-4,
.markdown-preview-section h4
{
    font-size: 20px !important;
    color: var(--text-title-h4) !important;
}

.cm-header-5,
.cm-header-6,
.markdown-preview-section h5,
.markdown-preview-section h6
{
    font-size: 18px !important;
    color: var(--text-title-h5) !important;
}

.suggestion-item.is-selected
{
    background-color: var(--background-secondary);
}

.empty-state-container:hover
{
    background-color: var(--background-secondary-alt);
    border: 5px solid var(--interactive-accent) !important;
}

.checkbox-container
{
    background-color: var(--interactive-before);
}

.checkbox-container:after
{
    background-color: var(--background-secondary-alt);
}

.mod-cta
{
    color: var(--background-secondary-alt) !important;
    font-weight: 600 !important;
}

.mod-cta:hover
{
    background-color: var(--interactive-before) !important;
    font-weight: 600 !important;
}

.CodeMirror-cursor
{
    background-color: var(--vim-cursor) !important;
    opacity: 60% !important;
}

input.task-list-item-checkbox {
    border: 1px solid var(--frost3);
    appearance: none;
    -webkit-appearance: none;
}

input.task-list-item-checkbox:checked {
    background-color: var(--frost2);
    box-shadow: inset 0 0 0 2px var(--background-primary);
}

.mermaid .note
{
    fill: var(--frost3) !important;
}

.heading-collapse-indicator svg {
    background: url('https://cdn.discordapp.com/attachments/560318304472793114/808721915627307058/lets_go_arrow.png');
    background-size: contain;
    width:12px;
    height: 12px;
}





/****************************************************************************
    BEGIN - My code! 😀
****************************************************************************/

::-webkit-scrollbar {
    background-color: transparent;
}
::-webkit-scrollbar-thumb {
    background-color: var(--dark3);
}

/* There's no current good way to select an image that is alone, and NOT style images that are inline */
/* span:only-child img {
    display: block;
    margin: 0 auto;
} */

.view-header {
    border-bottom-width: 0;
    box-shadow: 0 5px 5px rgba(0,0,0,0.1), 0 10px 5px rgba(0,0,0,0.1);
}

.nav-buttons-container {
    justify-content: space-between;
}

a.tag {
    white-space: nowrap;
    background-color: var(--yellow59);
    color: white !important;
    padding: 0.2em 0.4em;
    border-radius: 1em;
    display: inline-block;
    transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1);
    border: 1px solid rgba(255,255,255,0.3);
    box-shadow: -10px -10px 30px rgba(255,255,255,0.05), 10px 10px 30px rgba(0,0,0,0.2);
}

a.tag:hover {
    text-decoration: none !important;
    background-color: var(--yellow);
    transform: scale(1.1);
}

.dropdown {
    background-image: url('https://cdn.discordapp.com/attachments/560318304472793114/808721915627307058/lets_go_arrow.png')
}

/* Triple class selector, to avoid using !important */
.cm-highlight.cm-highlight.cm-highlight,
.markdown-preview-view mark {
    background-color: var(--text-mark);
}

.markdown-preview-view blockquote {
    border-radius: 10px;
    border: 1px solid rgba(255,255,255,0.03);
    padding: 10px 20px;
    position: relative;
    box-shadow: -10px -10px 30px rgba(255,255,255,0.05), 10px 10px 30px rgba(0,0,0,0.2);
    background-color: rgba(255,255,255,0.01);
}

.markdown-preview-view blockquote::before {
    content: "\201C";
    position: absolute;
    font-size: 3em;
    top: 0.3em;
    left: -0.15em;
}

/* GRAPH VIEW */
.theme-dark .graph-view.color-fill {
    color: white;
}

.theme-dark.graph-view.color-fill-highlight,
.theme-dark.graph-view.color-line-highlight
{
    color: var(--interactive-accent-rgb);
}
.graph-view.color-text
{
    color: var(--text-a-hover);
}
/*
.graph-view.color-line
{
  color: var(--background-modifier-border);
}
*/
.theme-light .graph-view.color-fill
{
    color: var(--background-secondary);
}
.graph-view.color-fill-highlight {
    color: var(--interactive-accent);
}
.graph-view.color-circle-highlight {
    color: var(--text-normal);
}
/* ... */

